--- a/index.html
+++ b/index.html
@@ -6,13 +6,7 @@
 
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
-  <script language="javascript" type="text/javascript" src="libraries/p5.sound (2).js"></script>
-  <script language="javascript" type="text/javascript" src="libraries/p5.sound.js"></script>
-  <script language="javascript" type="text/javascript" src="libraries/p5.sound.min.js"></script>
-  <script language="javascript" type="text/javascript" src="botones.js"></script>
-  <script language="javascript" type="text/javascript" src="pantallas.js"></script>
-  <script language="javascript" type="text/javascript" src="textos.js"></script>
-  <script language="javascript" type="text/javascript" src="tpFinal.js"></script>
+  <script language="javascript" type="text/javascript" src="tpfinalparte1.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <style>
